--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    margin: 0 0 0 20px;
 }
 
 body{
@@ -176,7 +177,7 @@ section {
     }
 
     #recordsTitle{
-        font-size: 19.504px;
+        font-size: 15px;
     }
 
     body{
